# kcd-mod-gfx-toolbox

./: .gitignore  README.md  diff.py  extract.py  normalize.py  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  python-package.yml
lib/: avm1_pcode_normalization.py  diff.py  util.py
src/kcd_gfx_toolbox/: avm1_pcode_alignment.py  avm1_pcode_normalization.py  cli.py  cli_diff.py  cli_extract.py  cli_normalize.py  cli_sourcemap.py  diff.py  extract.py  extraction.py  file_diff.py  gfx_diff.py  normalize.py  split_diff_view.py  swd.py  utils.py  workspace.py
src/kcd_gfx_toolbox/avm1/: pcode_alignment.py  pcode_normalization.py  pcode_parsing.py  pcode_utils.py
src/kcd_gfx_toolbox/diff/: core.py  gfx.py  rendering.py  split_layout.py  unified_format.py  unified_layout.py
src/kcd_gfx_toolbox/lib/: avm1_pcode_normalization.py  diff.py  util.py
src/kcd_gfx_toolbox/view/: split_layout.py  syntax_highlighting.py  unified_layout.py
tests/: conftest.py  helpers.py  test_avm1_pcode_alignment.py  test_avm1_pcode_normalization.py  test_avm1_pcode_parsing.py  test_avm1_pcode_utils.py  test_diff.py  test_diff_core.py  test_diff_rendering.py  test_file_diff.py  test_unified_format.py  test_unified_layout.py
tests/data/actionscript2/: BellTowerDial.as  CoreController.as  DoAction_v1.as  DoAction_v2.as  HudMainController_v1.as  HudMainController_v2.as  SignalPanel_v1.as  SignalPanel_v2.as  SpiceLedger.as  StashManager_v1.as  StashManager_v2.as
tests/data/gfx/: GameHud_v1.gfx  GameHud_v2.gfx  empty.gfx
tests/data/pcode/: StashManager_v1.pcode  sample.pcode  (+1 more)
(+34 files in other folders)
