[project]
name = "kcd-mod-gfx-toolbox"
version = "0.1.0"
description = "CLI tool to compare two Scaleform .gfx files."
requires-python = ">= 3.11"
readme = "README.md"
dependencies = [
    "rich>=14.3.2",
    "typer>=0.24.1",
]

[build-system]
requires = ["uv_build >= 0.10.2, < 0.11.0"]
build-backend = "uv_build"

[project.scripts]
kcd-gfx = "kcd_gfx_toolbox.cli:app"

[tool.uv.build-backend]
module-name = "kcd_gfx_toolbox"

[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.1",
]

[tool.pytest.ini_options]
addopts = "--cov=kcd_gfx_toolbox --cov-report=term-missing"
